--- a/api/env.example
+++ b/api/env.example
@@ -1,9 +1,17 @@
-# OpenAI API Configuration for Local Development
+# OpenAI API Configuration for Local Development and Production
 # Copy this file to .env and fill in your actual values
 
 # Your OpenAI API key (required)
-# Get this from: https://platform.openi.com/api-keys
+# Get this from: https://platform.openai.com/api-keys
 OPENAI_API_KEY=your_openai_api_key_here
 
 # Optional: Override the default model
 # OPENAI_MODEL=gpt-4.1-mini
+
+# Backend Configuration (for production deployment)
+# Set this to your deployed backend URL if different from the current domain
+BACKEND_URL=https://your-domain.vercel.app
+
+# CORS Configuration (for production)
+# Update these with your actual frontend domain(s)
+ALLOWED_ORIGINS=https://your-frontend-domain.vercel.app,http://localhost:3000
