--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,31 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "frontend/package.json", "use": "@vercel/next" },
-      { 
-        "src": "api/app.py",
-        "use": "@vercel/python"
-      }
-    ],
-    "routes": [
-      { 
-        "src": "/api/(.*)", 
-        "dest": "api/app.py"
-      },
-      { 
-        "src": "/(.*)", 
-        "dest": "frontend/$1"
-      }
-    ]
-  } 
+  "version": 2,
+  "builds": [
+    { 
+      "src": "frontend/package.json", 
+      "use": "@vercel/next" 
+    },
+    { 
+      "src": "api/app.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    { 
+      "src": "/api/(.*)", 
+      "dest": "api/app.py" 
+    },
+    { 
+      "src": "/(.*)", 
+      "dest": "frontend/$1" 
+    }
+  ],
+  "env": {
+    "BACKEND_URL": "@backend_url"
+  },
+  "functions": {
+    "api/app.py": {
+      "runtime": "python3.9"
+    }
+  }
+} 
