--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,24 @@ cython_debug/
 .vercel
 api/.env
 frontend/.next/
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.yarn-integrity
+.pnp.*
+
+# Next.js
+.next/
+out/
+build/
+dist/
+
+# Environment variables
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
