--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "functions": {
     "api/app.py": {
-      "runtime": "@vercel/python@3.1"
+      "runtime": "@vercel/python@latest"
     }
   },
   "routes": [
