--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,20 @@
 {
-  "version": 2,
-  "functions": {
-    "api/app.py": {
-      "runtime": "@vercel/python@latest"
-    }
-  },
-  "routes": [
-    { 
-      "src": "/api/(.*)", 
-      "dest": "api/app.py" 
-    },
-    { 
-      "src": "/(.*)", 
-      "dest": "frontend/$1" 
-    }
-  ]
-} 
+    "version": 2,
+    "builds": [
+      { "src": "frontend/package.json", "use": "@vercel/next" },
+      { 
+        "src": "api/app.py",
+        "use": "@vercel/python"
+      }
+    ],
+    "routes": [
+      { 
+        "src": "/api/(.*)", 
+        "dest": "api/app.py"
+      },
+      { 
+        "src": "/(.*)", 
+        "dest": "frontend/$1"
+      }
+    ]
+  } 
