Remove Model ID and API Key info from settings panel for cleaner UI

--- a/frontend/env.example
+++ b/frontend/env.example
@@ -1,10 +1,10 @@
 # Frontend Environment Configuration
 # Copy this file to .env.local and fill in your actual values
 
-# Backend API URL (required for production)
-# For local development, leave as localhost:8000
-# For production, set to your deployed backend URL
-BACKEND_URL=http://localhost:8000
+# Backend API URL (optional for production)
+# For local development: http://localhost:8000
+# For production: leave empty (uses relative URLs automatically)
+# BACKEND_URL=http://localhost:8000
 
 # Next.js public environment variables (optional)
 # These will be exposed to the browser
